5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1593_2908.log
== TEST (2019-03-30 12:57:34) 
-- CODE:
n1 = float(input("digite o valor de a: "))
n2 = float(input("digite o valor de b: "))
n3 = float(input("digite o valor de c: "))
 h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- ERROR:
File "XXXX", line 4
    h = (a**2 + b**2 + c**2) // (a + b + c)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:57:43) 
-- CODE:
n1 = float(input("digite o valor de a: "))
n2 = float(input("digite o valor de b: "))
n3 = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    h = (a**2 + b**2 + c**2) // (a + b + c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:58:30) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
b = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    h = (a**2 + b**2 + c**2) // (a + b + c)
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 12:58:44) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:59:01) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.259596
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 12:59:50) 
-- CODE:
a = input("digite o valor de a: "))
b = input("digite o valor de b: "))
c = input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.205214
-- ERROR:
  File "/home/codebench/codes/1593/2908/main.py", line 1
    a = input())
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:00:03) 
-- CODE:
a = input("digite o valor de a: ")
b = input("digite o valor de b: ")
c = input("digite o valor de c: ")
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.152648
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2908/main.py", line 4, in <module>
    h = (a**2 + b**2 + c**2) // (a + b + c)
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:01:33) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- OUTPUT:
25.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:02:09) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.195578
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:02:14) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.272279
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:02:42) 
-- CODE:
a = int(input("digite o valor de a: "))
b = int(input("digite o valor de b: "))
c = int(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.181623
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:02:47) 
-- CODE:
a = int(input("digite o valor de a: "))
b = int(input("digite o valor de b: "))
c = int(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.126089
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:03:08) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) // (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.140242
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.0
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.0
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:36:20) 
-- CODE:
a = float(input("digite o valor de a: "))
b = float(input("digite o valor de b: "))
c = float(input("digite o valor de c: "))
h = (a**2 + b**2 + c**2) / (a + b + c)
print(round(h, 7))
-- EXECUTION TIME:
0.215154
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
